# DynOSAM

./: DEBUGGING.md  README.md
dynosam/include/dynosam/backend/: Formulation-impl.hpp
dynosam/include/dynosam/frontend/vision/: FeatureDetector.hpp  Frame.hpp  StaticFeatureTracker.hpp  TrackerParams.hpp
dynosam/params/: CameraParams.yaml  FrontendParams.yaml  backend.flags  pipeline.flags
dynosam/src/backend/: RegularBackendModule.cc
dynosam/src/frontend/vision/: FeatureDetector.cc  FeatureTracker.cc  FeatureTrackerBase.cc  Frame.cc  StaticFeatureTracker.cc  TrackerParams.cc
dynosam_common/: CMakeLists.txt
dynosam_common/include/dynosam_common/utils/: OpenCVUtils.hpp
dynosam_common/src/: Edge.cc  EdgeCluster.cc
dynosam_common/src/utils/: OpenCVUtils.cc
dynosam_nn/: CMakeLists.txt
dynosam_nn/include/dynosam_nn/: YoloV8ObjectDetector.hpp
dynosam_ros/include/dynosam_ros/: DataProviderRos.hpp  OnlineDataProviderRos.hpp  PipelineRos.hpp
dynosam_ros/launch/: dyno_sam_online_rgbd_launch.py
dynosam_ros/nodes/: dynosam_tracking_demo_node.cc
dynosam_ros/rviz/: rivz.rviz  rviz_dsd.rviz
dynosam_ros/src/: OnlineDataProviderRos.cc
